# quant

./: .gitignore  README.md  install.py  main.py  pyproject-linux.toml  pyproject-mac.toml  pyproject-windows.toml  pyproject.toml  start_server.sh  stop_server.sh
quant/: back_test.py  constants.py  fetch_data.py  fetch_spy500.py  fetch_spy500_data.py  logger.py  trade_with_futu.py  train_model.py
quant/client/: decision_engine.py  finrl_client.py  futu_client.py  history_data_client.py  paper_trading_client.py  paper_trading_clinet.py  realtime_data_client.py
quant/utils/: __init__.py  logging_config.py  utils.py
stock_data/: .gitkeep  A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  ANSS.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  (+463 more)
tests/: __init__.py  alpaca_client_test.py  decision_engine_test.py  finrl_client_test.py  futu_client_test.py  history_data_client_test.py  paper_trading_client_test.py  polygon_client_test.py  realtime_data_client_test.py  utils_test.py
